# vramcheck

./: .gitignore  AGENT-CONVENTIONS.md  DECISIONS.md  DESIGN.md  README.md  STATUS.md  pyproject.toml
docs/: AGENT-CONVENTIONS.md  DECISIONS.md  DESIGN.md  STATUS.md  VISION.md  cli.md  web.md
tests/: test_cli.py  test_core.py  test_validate.py
validate/: README.md  __init__.py  calibrate.py  config.py  parse.py  run.py  runpod.sh
vramcheck/: __init__.py  cli.py  report.py
vramcheck/core/: __init__.py  gpus.py  kv.py  memory.py  models.py
web/: index.html
